Add FileChecker tests and fix accented characters